python-compiler/tests/snapshots/lib__strings__len_inline.snap
---
source: tests/strings.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@str_literal = private unnamed_addr constant [12 x i8] c"Hello World\00", align 1
@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

define i32 @main() {
entry:
  %malloc_str = call ptr @malloc(i64 12)
  %memcpy_str = call ptr @memcpy(ptr %malloc_str, ptr @str_literal, i64 12)
  %ptr_to_int = ptrtoint ptr %malloc_str to i64
  %ptr_payload = and i64 %ptr_to_int, 281474976710655
  %pyobject_string = or i64 9221683186994511872, %ptr_payload
  %check_qnan = and i64 %pyobject_string, 9221120237041090560
  %is_float = icmp ne i64 %check_qnan, 9221120237041090560
  %tag_bits = and i64 %pyobject_string, 1970324836974592
  %tag = lshr i64 %tag_bits, 48
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %map_bool = select i1 %is_bool, i64 2, i64 %tag
  %map_string = select i1 %is_string, i64 3, i64 %map_bool
  %map_list = select i1 %is_list, i64 4, i64 %map_string
  %final_tag = select i1 %is_float, i64 1, i64 %map_list
  %is_string1 = icmp eq i64 %final_tag, 3
  br i1 %is_string1, label %string_len, label %other_len

string_len:                                       ; preds = %entry
  %extract_ptr_payload = and i64 %pyobject_string, 281474976710655
  %payload_to_ptr = inttoptr i64 %extract_ptr_payload to ptr
  %strlen = call i64 @strlen(ptr %payload_to_ptr)
  %int_payload = and i64 %strlen, 281474976710655
  %pyobject_int = or i64 9221120237041090560, %int_payload
  br label %len_merge

other_len:                                        ; preds = %entry
  br label %len_merge

len_merge:                                        ; preds = %other_len, %string_len
  %len_result = phi i64 [ %pyobject_int, %string_len ], [ 9221120237041090560, %other_len ]
  %check_qnan2 = and i64 %len_result, 9221120237041090560
  %is_float3 = icmp ne i64 %check_qnan2, 9221120237041090560
  %tag_bits4 = and i64 %len_result, 1970324836974592
  %tag5 = lshr i64 %tag_bits4, 48
  %is_bool6 = icmp eq i64 %tag5, 1
  %is_string7 = icmp eq i64 %tag5, 2
  %is_list8 = icmp eq i64 %tag5, 3
  %map_bool9 = select i1 %is_bool6, i64 2, i64 %tag5
  %map_string10 = select i1 %is_string7, i64 3, i64 %map_bool9
  %map_list11 = select i1 %is_list8, i64 4, i64 %map_string10
  %final_tag12 = select i1 %is_float3, i64 1, i64 %map_list11
  %check_qnan13 = and i64 %len_result, 9221120237041090560
  %is_float14 = icmp ne i64 %check_qnan13, 9221120237041090560
  %i64_to_f64 = bitcast i64 %len_result to double
  %extract_payload = and i64 %len_result, 281474976710655
  %sign_bit = lshr i64 %extract_payload, 47
  %is_negative = icmp eq i64 %sign_bit, 1
  %sign_extend = or i64 %extract_payload, -281474976710656
  %signed_payload = select i1 %is_negative, i64 %sign_extend, i64 %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float14, double %i64_to_f64, double %payload_to_f64
  %is_int = icmp eq i64 %final_tag12, 0
  %is_string15 = icmp eq i64 %final_tag12, 3
  br i1 %is_string15, label %print_string, label %check_int

check_int:                                        ; preds = %len_merge
  br i1 %is_int, label %print_int, label %print_float

print_int:                                        ; preds = %check_int
  %to_int = fptosi double %final_payload to i64
  %printf_int = call i32 (ptr, ...) @printf(ptr @int_format_string, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %check_int
  %printf_float = call i32 (ptr, ...) @printf(ptr @float_format_string, double %final_payload)
  br label %print_end

print_string:                                     ; preds = %len_merge
  %extract_ptr_payload16 = and i64 %len_result, 281474976710655
  %payload_to_ptr17 = inttoptr i64 %extract_ptr_payload16 to ptr
  %printf_string = call i32 (ptr, ...) @printf(ptr @string_format_string, ptr %payload_to_ptr17)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  ret i32 0
}

declare ptr @malloc(i64)

declare ptr @memcpy(ptr, ptr, i64)

declare i64 @strlen(ptr)

declare i32 @printf(ptr, ...)
