python-compiler/tests/snapshots/lib__strings__string_concatenation_empty.snap
---
source: tests/strings.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@str_literal = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@str_literal.1 = private unnamed_addr constant [6 x i8] c"Hello\00", align 1
@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

define i32 @main() {
entry:
  %s = alloca i64, align 8
  %malloc_str = call ptr @malloc(i64 1)
  %memcpy_str = call ptr @memcpy(ptr %malloc_str, ptr @str_literal, i64 1)
  %ptr_to_int = ptrtoint ptr %malloc_str to i64
  %ptr_payload = and i64 %ptr_to_int, 281474976710655
  %pyobject_string = or i64 9221683186994511872, %ptr_payload
  %malloc_str1 = call ptr @malloc(i64 6)
  %memcpy_str2 = call ptr @memcpy(ptr %malloc_str1, ptr @str_literal.1, i64 6)
  %ptr_to_int3 = ptrtoint ptr %malloc_str1 to i64
  %ptr_payload4 = and i64 %ptr_to_int3, 281474976710655
  %pyobject_string5 = or i64 9221683186994511872, %ptr_payload4
  %check_qnan = and i64 %pyobject_string, 9221120237041090560
  %is_float = icmp ne i64 %check_qnan, 9221120237041090560
  %tag_bits = and i64 %pyobject_string, 1970324836974592
  %tag = lshr i64 %tag_bits, 48
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %map_bool = select i1 %is_bool, i64 2, i64 %tag
  %map_string = select i1 %is_string, i64 3, i64 %map_bool
  %map_list = select i1 %is_list, i64 4, i64 %map_string
  %final_tag = select i1 %is_float, i64 1, i64 %map_list
  %check_qnan6 = and i64 %pyobject_string5, 9221120237041090560
  %is_float7 = icmp ne i64 %check_qnan6, 9221120237041090560
  %tag_bits8 = and i64 %pyobject_string5, 1970324836974592
  %tag9 = lshr i64 %tag_bits8, 48
  %is_bool10 = icmp eq i64 %tag9, 1
  %is_string11 = icmp eq i64 %tag9, 2
  %is_list12 = icmp eq i64 %tag9, 3
  %map_bool13 = select i1 %is_bool10, i64 2, i64 %tag9
  %map_string14 = select i1 %is_string11, i64 3, i64 %map_bool13
  %map_list15 = select i1 %is_list12, i64 4, i64 %map_string14
  %final_tag16 = select i1 %is_float7, i64 1, i64 %map_list15
  %lhs_is_string = icmp eq i64 %final_tag, 3
  %rhs_is_string = icmp eq i64 %final_tag16, 3
  %both_strings = and i1 %lhs_is_string, %rhs_is_string
  br i1 %both_strings, label %str_concat, label %arithmetic

str_concat:                                       ; preds = %entry
  %extract_ptr_payload = and i64 %pyobject_string, 281474976710655
  %payload_to_ptr = inttoptr i64 %extract_ptr_payload to ptr
  %extract_ptr_payload17 = and i64 %pyobject_string5, 281474976710655
  %payload_to_ptr18 = inttoptr i64 %extract_ptr_payload17 to ptr
  %lhs_len = call i64 @strlen(ptr %payload_to_ptr)
  %rhs_len = call i64 @strlen(ptr %payload_to_ptr18)
  %total_len = add i64 %lhs_len, %rhs_len
  %total_size = add i64 %total_len, 1
  %malloc_concat = call ptr @malloc(i64 %total_size)
  %memcpy_lhs = call ptr @memcpy(ptr %malloc_concat, ptr %payload_to_ptr, i64 %lhs_len)
  %rhs_dest = getelementptr i8, ptr %malloc_concat, i64 %lhs_len
  %rhs_copy_len = add i64 %rhs_len, 1
  %memcpy_rhs = call ptr @memcpy(ptr %rhs_dest, ptr %payload_to_ptr18, i64 %rhs_copy_len)
  %ptr_to_int19 = ptrtoint ptr %malloc_concat to i64
  %ptr_payload20 = and i64 %ptr_to_int19, 281474976710655
  %pyobject_string21 = or i64 9221683186994511872, %ptr_payload20
  br label %add_merge

arithmetic:                                       ; preds = %entry
  %check_qnan22 = and i64 %pyobject_string, 9221120237041090560
  %is_float23 = icmp ne i64 %check_qnan22, 9221120237041090560
  %i64_to_f64 = bitcast i64 %pyobject_string to double
  %extract_payload = and i64 %pyobject_string, 281474976710655
  %sign_bit = lshr i64 %extract_payload, 47
  %is_negative = icmp eq i64 %sign_bit, 1
  %sign_extend = or i64 %extract_payload, -281474976710656
  %signed_payload = select i1 %is_negative, i64 %sign_extend, i64 %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float23, double %i64_to_f64, double %payload_to_f64
  %check_qnan24 = and i64 %pyobject_string5, 9221120237041090560
  %is_float25 = icmp ne i64 %check_qnan24, 9221120237041090560
  %i64_to_f6426 = bitcast i64 %pyobject_string5 to double
  %extract_payload27 = and i64 %pyobject_string5, 281474976710655
  %sign_bit28 = lshr i64 %extract_payload27, 47
  %is_negative29 = icmp eq i64 %sign_bit28, 1
  %sign_extend30 = or i64 %extract_payload27, -281474976710656
  %signed_payload31 = select i1 %is_negative29, i64 %sign_extend30, i64 %extract_payload27
  %payload_to_f6432 = sitofp i64 %signed_payload31 to double
  %final_payload33 = select i1 %is_float25, double %i64_to_f6426, double %payload_to_f6432
  %lhs_is_float = icmp eq i64 %final_tag, 1
  %rhs_is_float = icmp eq i64 %final_tag16, 1
  %result_is_float = or i1 %lhs_is_float, %rhs_is_float
  %addtmp = fadd double %final_payload, %final_payload33
  %result_tag = select i1 %result_is_float, i64 1, i64 0
  %is_float_tag = icmp eq i64 %result_tag, 1
  %float_to_i64 = bitcast double %addtmp to i64
  %is_bool34 = icmp eq i64 %result_tag, 2
  %is_string35 = icmp eq i64 %result_tag, 3
  %is_list36 = icmp eq i64 %result_tag, 4
  %tag_temp1 = select i1 %is_bool34, i64 1, i64 0
  %tag_temp2 = select i1 %is_string35, i64 2, i64 %tag_temp1
  %internal_tag = select i1 %is_list36, i64 3, i64 %tag_temp2
  %payload_to_i64 = fptosi double %addtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %tag_shifted = shl i64 %internal_tag, 48
  %with_qnan = or i64 9221120237041090560, %tag_shifted
  %nanboxed = or i64 %with_qnan, %payload_masked
  %pyobject = select i1 %is_float_tag, i64 %float_to_i64, i64 %nanboxed
  br label %add_merge

add_merge:                                        ; preds = %arithmetic, %str_concat
  %add_result = phi i64 [ %pyobject_string21, %str_concat ], [ %pyobject, %arithmetic ]
  store i64 %add_result, ptr %s, align 4
  %s37 = load i64, ptr %s, align 4
  %check_qnan38 = and i64 %s37, 9221120237041090560
  %is_float39 = icmp ne i64 %check_qnan38, 9221120237041090560
  %tag_bits40 = and i64 %s37, 1970324836974592
  %tag41 = lshr i64 %tag_bits40, 48
  %is_bool42 = icmp eq i64 %tag41, 1
  %is_string43 = icmp eq i64 %tag41, 2
  %is_list44 = icmp eq i64 %tag41, 3
  %map_bool45 = select i1 %is_bool42, i64 2, i64 %tag41
  %map_string46 = select i1 %is_string43, i64 3, i64 %map_bool45
  %map_list47 = select i1 %is_list44, i64 4, i64 %map_string46
  %final_tag48 = select i1 %is_float39, i64 1, i64 %map_list47
  %check_qnan49 = and i64 %s37, 9221120237041090560
  %is_float50 = icmp ne i64 %check_qnan49, 9221120237041090560
  %i64_to_f6451 = bitcast i64 %s37 to double
  %extract_payload52 = and i64 %s37, 281474976710655
  %sign_bit53 = lshr i64 %extract_payload52, 47
  %is_negative54 = icmp eq i64 %sign_bit53, 1
  %sign_extend55 = or i64 %extract_payload52, -281474976710656
  %signed_payload56 = select i1 %is_negative54, i64 %sign_extend55, i64 %extract_payload52
  %payload_to_f6457 = sitofp i64 %signed_payload56 to double
  %final_payload58 = select i1 %is_float50, double %i64_to_f6451, double %payload_to_f6457
  %is_int = icmp eq i64 %final_tag48, 0
  %is_string59 = icmp eq i64 %final_tag48, 3
  br i1 %is_string59, label %print_string, label %check_int

check_int:                                        ; preds = %add_merge
  br i1 %is_int, label %print_int, label %print_float

print_int:                                        ; preds = %check_int
  %to_int = fptosi double %final_payload58 to i64
  %printf_int = call i32 (ptr, ...) @printf(ptr @int_format_string, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %check_int
  %printf_float = call i32 (ptr, ...) @printf(ptr @float_format_string, double %final_payload58)
  br label %print_end

print_string:                                     ; preds = %add_merge
  %extract_ptr_payload60 = and i64 %s37, 281474976710655
  %payload_to_ptr61 = inttoptr i64 %extract_ptr_payload60 to ptr
  %printf_string = call i32 (ptr, ...) @printf(ptr @string_format_string, ptr %payload_to_ptr61)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  ret i32 0
}

declare ptr @malloc(i64)

declare ptr @memcpy(ptr, ptr, i64)

declare i64 @strlen(ptr)

declare i32 @printf(ptr, ...)
